--- a/2017-09-12.md
+++ b/2017-09-12.md
@@ -4,4 +4,11 @@
 
 | 姓名             | 国籍            | 主要思想             |
 | -------------- | ------------- | ---------------- | 
-| 苏格拉底           | 希腊            |                  |
+| 苏格拉底           | 希腊            | 西方哲学奠基人，柏拉图的老师，用提问的方式来引发讨论和思考，最后被希腊城邦的公民公投判决死刑                 |
+| 柏拉图             | 希腊 |  |
+| 亚里士多德 | 希腊 |  |
+| 斯宾诺莎 |  |  |
+| 洛克 |  |  |
+| 笛卡尔 |  |  |
+| 霍布斯 |  |  |
+| 休谟 |  |  |
