--- a/2017-09-11.md
+++ b/2017-09-11.md
@@ -12,7 +12,7 @@
 ssl连上网站的服务器，一般来说，连接成功时控制台会打印一串信息，这些信息里包含当前服务器安装的**操作系统**版本，这里先记下，后面有用，笔者的服务器系统版本是**Ubuntu 16.04**。
 
 ### Step 2:
-打开![](certbot.eff.org)，根据指示选择服务器上使用的server和os，我的是nginx和上一步里提到的Ubuntu 16.04，选好之后网站会生成相应的指示，后面根据网站的指示来做就好了
+打开[certbot.eff.org](certbot.eff.org)，根据指示选择服务器上使用的server和os，我的是nginx和上一步里提到的Ubuntu 16.04，选好之后网站会生成相应的指示，后面根据网站的指示来做就好了
 
 ### Step 3:
 还是以我的为例，
@@ -34,4 +34,4 @@ then，
 
 
 ### 写在最后
-感谢免费开源的![let'sencrypt](https://letsencrypt.org)项目，让我这种个人开发者也能享受到https给网站带来的安全提升，而无需去购买证书，获得认证等一系列过程。未来某天，希望我也能为开源界作出贡献。
+感谢免费开源的[let'sencrypt](https://letsencrypt.org)项目，让我这种个人开发者也能享受到https给网站带来的安全提升，而无需去购买证书，获得认证等一系列过程。未来某天，希望我也能为开源界作出贡献。
