--- a/2017-09-12.md
+++ b/2017-09-12.md
@@ -5,10 +5,16 @@
 | 姓名             | 国籍            | 主要思想             |
 | -------------- | ------------- | ---------------- | 
 | 苏格拉底           | 希腊            | 西方哲学奠基人，柏拉图的老师，用提问的方式来引发讨论和思考，最后被希腊城邦的公民公投判决死刑                 |
-| 柏拉图             | 希腊 |  |
-| 亚里士多德 | 希腊 |  |
-| 斯宾诺莎 |  |  |
-| 洛克 |  |  |
-| 笛卡尔 |  |  |
+| 柏拉图             | 希腊 | 开创了二元论，将世界二分为*智慧*和*感觉*，亚里士多德的老师 |
+| 亚里士多德 | 希腊 | 众多学科都颇有研究，包括解剖学、天文学、经济学、地质学、气象学、物理学和生物学等 |
+| 斯宾诺莎 | 荷兰 | 一元论，把世间万物看作一个整体，我们都是这个整体的一部分，所以作为个体的人不存在自由意志，一生贫苦，以打磨镜片为生，早逝 |
+| 笛卡尔 | 法国 | 哲学家、数学家和物理学家，理性主义代表 |
+| 洛克 | 英国 | 经验主义代表人物，认为心灵是一块白板，人生下来时不带有任何记忆和思想，政治上主张政府只有在取得被统治者的同意，并且保障人民拥有*生命*、*自由*和*财产*的自然权利时，其统治才有正当性 |
 | 霍布斯 |  |  |
 | 休谟 |  |  |
+| 莱布尼兹 |  |  |
+| 牛顿 |  |  |
+| 康德 |  |  |
+| 尼采 |  |  |
+| 罗素 |  |  |
+| 维特根斯坦 |  |  |
