--- a/2017-09-12.md
+++ b/2017-09-12.md
@@ -1,4 +1,4 @@
-# 简单谈谈哲学的发展
+# 古今中外那些哲学家们
 
 写在前面： 前几天偶然在amazon发现一本叫「哲学家都干了些什么」的书，虽然是不知名的作者，但是看到四百多个评价还能保持四星半的分数，那应该内容不错，于是就下单了。看完觉得确实不错，作者用大白话把整个哲学史捋了一遍，即使是之前看过类似的书（比如「苏菲的世界」，冯友兰的那本哲学史），也不会觉得重复或腻味。这里我想凭记忆把那些有影响力的哲学家以及主要思想给罗列出来，也算有些收获。
 
