--- a/2017-09-11.md
+++ b/2017-09-11.md
@@ -1,18 +1,27 @@
 # 给网站加密(从http到https的变身)
 
-## Why 
+## Why: 
 
-## How: 
+### 为什么要用https? 
+- 因为http传输的数据都是未加密的（明文传输），隐私很容易泄露。
+- 容易遭到[中间人劫持](https://baike.baidu.com/item/%E4%B8%AD%E9%97%B4%E4%BA%BA%E6%94%BB%E5%87%BB)攻击（MITM attack）
 
+### https原理介绍
+https协议实际上是http + ssl/tls协议，那么，什么又是ssl/tls呢?
+SSL（Secure Sockets Layer，安全*套接层*）最初由Netscape推出，后来发展成为TLS（transport layer security，传输层安全协议）
+此处还涉及到网站的**数字证书**，数字证书由CA(Certificate Authority)发放。
+
+
+## How:
 ### 前提：
 1. 能够SSL连接到网站的服务器
 2. 有服务器的sudo权限
 
 ### Step 1:
-ssl连上网站的服务器，一般来说，连接成功时控制台会打印一串信息，这些信息里包含当前服务器安装的**操作系统**版本，这里先记下，后面有用，笔者的服务器系统版本是**Ubuntu 16.04**。
+ssl连上网站的服务器，一般来说，连接成功时控制台会打印一串信息，这些信息里包含当前服务器安装的**操作系统**版本，这里先记下，后面有用，笔者的服务器系统版本是**Ubuntu 16.04**。
 
 ### Step 2:
-打开[certbot.eff.org](certbot.eff.org)，根据指示选择服务器上使用的server和os，我的是nginx和上一步里提到的Ubuntu 16.04，选好之后网站会生成相应的指示，后面根据网站的指示来做就好了
+打开[certbot.eff.org](https://certbot.eff.org)，根据指示选择服务器上使用的server和os，我的是nginx和上一步里提到的Ubuntu 16.04，选好之后网站会生成相应的指示，后面根据网站的指示来做就好了
 
 ### Step 3:
 还是以我的为例，
@@ -27,7 +36,7 @@ then，
 根据命令行提示一步步来，整个过程异常简单，非常傻瓜化，真是不可思议
 
 ### Last Step:
-访问www.ssllabs.com/ssltest/analyze.html?d=${your.website} (花括号里替换成你的网站url)检测你的网站在各个环境下客户端的https访问情况，其实也可以直接在浏览器访问自己的网站，这时你就会看到你的网站已经htpps化啦。
+访问 www.ssllabs.com/ssltest/analyze.html?d=${your.website} (花括号里替换成你的网站url)检测你的网站在各个环境下客户端的https访问情况，其实也可以直接在浏览器访问自己的网站，这时你就会看到你的网站已经htpps化啦。
 
 ### 可能碰到的坑 
 第一次我在**sudo certbot --nginx**这一步失败了，原因是没有开放443端口。因为我用的是aws，所以登录aws控制台，安全组设置里开放了443端口，就OK了。
