--- a/2017-09-13.md
+++ b/2017-09-13.md
@@ -1,4 +1,4 @@
-# ES6中的常用特性和那些不常用但可能会非常有用的特性
+# ES6中的常用特性和那些不常用但可能会非常有用的特性(Part 1)
 
 ## 写在前面：
 去年刚进这家公司后就参与启动了DMP（Data-Management Platform）项目，项目从一开始就用的最新的技术，我也是从那时起开始大量接触ES6的语法，到目前为止已经一年多了。我发现ES6里的很多语法已经完全取代了老式的语法（比如有了const和let后就不会再用var，Promise和async/await完全取代了回掉函数），然而还有一些特性，似乎完全没有用到。写这篇文章的目的，就是为了研究一下ES6里那些平时不怎么用的语法，是不是有可能在实际生产中会很有帮助。
@@ -17,7 +17,7 @@ for (var i = 0; i < 10; i++) {
 a[5]() // 期望的返回值是5，实际返回10
 
 ```
-出现这种情况，是由于在**for**循环里声明的**i**其实是一个**全局变量**，数组里的每个函数都引用了这个变量i，由于i最后的值为10，所以不管你执行的是那个函数，最后都会返回10。 
+出现这种情况，是由于在**for**循环里声明的**i**其实是一个**全局变量**，数组里的每个函数都引用了这个变量**i**，由于**i**最后的值为10，所以不管你执行的是那个函数，最后都会返回10。 
 
 如果用**let**就能避免这个问题
 ```javascript
@@ -29,7 +29,22 @@ for(let i = 0; i < 10; i++) {
 }
 a[5]()  // 与期望一致，返回值是5
 ```
-使用let要注意的是，在代码块内JS引擎不会像对待var那样把声明提升，也就是说声明必须放在使用之前，否则会抛出**Uncaught ReferenceError**的错误。
+那么问题来了，在**let**还没有出现之前，开发者是如何解决这个问题的呢？
+可以用立即调用函数表达式（IIFE）:
+```javascript
+for(var i = 0; i < 10; i++) {
+  a[i] = (function (x) {
+    return function () {
+      return x
+    }
+  })(i)
+}
+```
+这样为什么行之有效，请参看《你不知道的JS 卷1》
+
+使用**let**要注意的是，在代码块内JS引擎不会像对待**var**那样把声明提升，也就是说声明必须放在使用之前，否则会抛出**Uncaught ReferenceError**的错误。
+
+
 
 关键字**const**则用于常量的声明，需要注意的是，const只对基本类型管用，对于对象这种就起不到约束作用了，比如
 ```javascript
@@ -40,8 +55,49 @@ console.log(foo) // { bar: 2 }
 原因是const本质上只约束变量所指向的内存地址不变，对于基本类型，值就保存在变量指向的内存地址。
 
 
-2. 箭头函数
+2. 函数参数默认值
+这个不必多说，自从用上了这个特性，少写了很多代码，先看ES6怎么写
+```javascript
+function printX(x = 'x') {
+  console.log(x)
+}
+printX() // x
+printX('y')  // y
+```
+用法一目了然。
+再来对比一下过去的写法：
+```javascript
+function printX(x) {
+  x = x || 'x'
+  console.log(x)
+}
+```
+这还只是一个参数的情况，多个参数的情况下更能体现**函数参数默认值**的作用。
 
-3. async/await
+3. 箭头函数
+箭头函数的意义，不只是写法更加优雅。
+```javascript
+// 箭头函数
+var f = v => v
+// 老式的写法
+var f = function (v) {
+  return v
+}
+```
+多个参数
+```javascript
+// arrow function
+var add = (num1, num2) => num1 + num2
+// old style
+var add = function (num1, num2) {
+  return num1 + num2
+}
+```
+简洁了不止一丢丢。
+
+4. 对象延展和属性简写 
+
+
+5. async/await
 
 ## Part 2: 不常用特性
