--- a/2017-09-13.md
+++ b/2017-09-13.md
@@ -1,7 +1,7 @@
 # ES6中的常用特性和那些不常用但可能会非常有用的特性(Part 1)
 
 ## 写在前面：
-去年刚进这家公司后就参与启动了DMP（Data-Management Platform）项目，项目从一开始就用的最新的技术，我也是从那时起开始大量接触ES6的语法，到目前为止已经一年多了。我发现ES6里的很多语法已经完全取代了老式的语法（比如有了const和let后就不会再用var，Promise和async/await完全取代了回掉函数），然而还有一些特性，似乎完全没有用到。写这篇文章的目的，就是为了研究一下ES6里那些平时不怎么用的语法，是不是有可能在实际生产中会很有帮助。
+去年刚进这家公司后就参与启动了DMP（Data-Management Platform）项目，项目从一开始就用的最新的技术，我也是从那时起开始大量接触ES6的语法，到目前为止已经一年多了。我发现ES6里的很多语法已经完全取代了老式的语法（比如有了const和let后就不会再用var，Promise和async/await完全取代了回调函数），然而还有一些特性，似乎完全没有用到。写这篇文章的目的，就是为了研究一下ES6里那些平时不怎么用的语法，是不是有可能在实际生产中会很有帮助。
 
 ## Part 1: 常用特性
 
@@ -95,9 +95,113 @@ var add = function (num1, num2) {
 ```
 简洁了不止一丢丢。
 
-4. 对象延展和属性简写 
+除了写法更英俊潇洒，还有**最关键**的一点区别，就是二者对**this**的处理方式，以下面这个例子来说：
+```javascript {.line-numbers}
+var a = 'foo'
+function foo () {
+  setTimeout(function () {
+    console.log(this.a)
+  }, 1000)
+}
+// 默认this绑定
+foo() // foo
+// 隐式this绑定
+var obj = {
+  a: 'bar',
+  foo: foo
+}
+obj.foo() // foo
+// 显式this绑定
+foo.apply({ a: 'whatever' }) // foo
+```
+可以看到，无论何种方式，控制台输出始终是'foo'，也就是在一开始声明的全局变量**a**，说明**setTimeout**里的函数在执行时**this**指向全局对象window（浏览器环境下）。
+如果把setTimeout里的函数换成箭头函数，再看看结果
+```javascript
+var a = 'foo'
+function foo () {  
+  setTimeout(() => {
+    console.log(this.a)
+  }, 1000)
+}
+foo() // foo
+var obj = {
+  a: 'bar',
+  foo: foo
+}
+obj.foo()  // bar
+foo.apply({ a: 'whatever' }) // whatever
+```
+产生差异的原因在于，箭头函数里的this**总是**指向定义时的上下文，而不是函数执行时的上下文。
 
+
+4. 对象展开符(...)和属性简写 
+这两个特性我个人非常喜欢，对象展开符可以用在许多地方
+```javascript
+let foo = {
+  a: 1,
+  b: 2,
+  c: 3
+}
+// Example 0
+// 以下两种方式效果相同
+let bar = {...foo, d: 4}  // {a: 1, b: 2, c: 3, d: 4}
+let baz = Object.assign({}, foo, { d: 4 })  // {a: 1, b: 2, c: 3, d: 4}
+// Example 1
+let { a, ...rest } = foo  // a => 1, rest => {b: 2, c: 3}
+```
+
+对象属性简写也很有用：
+```javascript
+let foo = 'foo'
+let bar = 'bar'
+
+let obj = {
+  foo,
+  bar
+}
+```
+显而易见，声明对象时当key和value相同时，可以只写key而省略value部分。
 
 5. async/await
+关于async/await，有必要单独写一篇总结，这里先给自己挖个坑。
+
+6. 新增内置函数
+ES6 在String，Number，Array，Object这些原生对象上新增了很多实用方法，对于像lodash/underscore这类的类库依赖变小了很多。
+#### String
+includes, startsWith, endsWith, repeat, padStart, padEnd...
+每个函数基本上看名字就知道是干啥的了。
+```javascript
+let name = 'wangweitao'
+name.includes('wei') // true
+name.startsWith('wang') // true
+name.endsWith('ao') // true
+name.repeat(2) // wangweitaowangweitao
+// padStart, endStart的第一个参数指定字符串长度，当给定字符串小于这个长度时，用第二个参数来补齐
+name.padStart(12, 'x') // xxwangweitao
+name.padEnd(12, 'x')  // wangweitaoxx
+```
+
+#### Number
+parseInt, parseFloat, isInteger, isNaN, EPSILON, **(Math.pow)...
+parseInt, parseFloat之前是全局方法，可以直接调用，ES6以后移植到Number对象上，因此**不再是**全局的。
+```javascript
+Number.isInteger(3) // true
+Number.isInteger(3.0) // true
+Number.isInteger(3.3)  // false
+
+Number.isNaN(NaN)  // 这个方法解决了JS里NaN == NaN为false的问题
+```
+Number.EPSILON表示一个极小常量，众所周知，由于浮点数的精度问题，大多数编程语言中 0.1 + 0.2 是不等于0.3的（在JS中等于0.30000000000000004），Number.EPSILON在判断浮点数是否相等时作用就体现出来了
+```javascript
+0.1 + 0.2 === 0.3  // false
+(0.1 + 0.2) - 0.3 < Number.EPSILON  // true
+0.3 - (0.1+ 0.2) < Number.EPSILON  // true
+```
+
+#### Array
+
+
+#### Object
+
 
 ## Part 2: 不常用特性
