--- a/2017-09-13.md
+++ b/2017-09-13.md
@@ -6,7 +6,7 @@
 ## Part 1: 常用特性
 
 1. const, let 
-在只能用var来声明变量的时代，JavaScript是没有**块作用域**的，对于新手来说，用var来声明变量最常见的是这个问题：
+  在只能用var来声明变量的时代，JavaScript是没有**块作用域**的，对于新手来说，用var来声明变量最常见的是这个问题：
 ```javascript
 var a = []
 for (var i = 0; i < 10; i++) {
@@ -56,7 +56,7 @@ console.log(foo) // { bar: 2 }
 
 
 2. 函数参数默认值
-这个不必多说，自从用上了这个特性，少写了很多代码，先看ES6怎么写
+  这个不必多说，自从用上了这个特性，少写了很多代码，先看ES6怎么写
 ```javascript
 function printX(x = 'x') {
   console.log(x)
@@ -75,7 +75,7 @@ function printX(x) {
 这还只是一个参数的情况，多个参数的情况下更能体现**函数参数默认值**的作用。
 
 3. 箭头函数
-箭头函数的意义，不只是写法更加优雅。
+  箭头函数的意义，不只是写法更加优雅。
 ```javascript
 // 箭头函数
 var f = v => v
@@ -96,7 +96,7 @@ var add = function (num1, num2) {
 简洁了不止一丢丢。
 
 除了写法更英俊潇洒，还有**最关键**的一点区别，就是二者对**this**的处理方式，以下面这个例子来说：
-```javascript {.line-numbers}
+```javascript
 var a = 'foo'
 function foo () {
   setTimeout(function () {
@@ -135,7 +135,7 @@ foo.apply({ a: 'whatever' }) // whatever
 
 
 4. 对象展开符(...)和属性简写 
-这两个特性我个人非常喜欢，对象展开符可以用在许多地方
+  这两个特性我个人非常喜欢，对象展开符可以用在许多地方
 ```javascript
 let foo = {
   a: 1,
@@ -148,6 +148,13 @@ let bar = {...foo, d: 4}  // {a: 1, b: 2, c: 3, d: 4}
 let baz = Object.assign({}, foo, { d: 4 })  // {a: 1, b: 2, c: 3, d: 4}
 // Example 1
 let { a, ...rest } = foo  // a => 1, rest => {b: 2, c: 3}
+// Example 2
+let fun = function (a, b, c) {
+  return a + b + c
+}
+let args = [a, b, c]
+fun.apply(null, args) // 不用展开符就只能用apply来传递参数
+fun(...args)  // 有了展开符就不需要apply来帮衬
 ```
 
 对象属性简写也很有用：
@@ -160,13 +167,13 @@ let obj = {
   bar
 }
 ```
-显而易见，声明对象时当key和value相同时，可以只写key而省略value部分。
+很显然，声明对象时当key和value相同时，可以只写key而省略value部分。
 
 5. async/await
-关于async/await，有必要单独写一篇总结，这里先给自己挖个坑。
+  关于async/await，有必要单独写一篇总结，这里先给自己挖个坑。
 
 6. 新增内置函数
-ES6 在String，Number，Array，Object这些原生对象上新增了很多实用方法，对于像lodash/underscore这类的类库依赖变小了很多。
+  ES6 在String，Number，Array，Object这些原生对象上新增了很多实用方法，对于像lodash/underscore这类的类库依赖变小了很多。
 #### String
 includes, startsWith, endsWith, repeat, padStart, padEnd...
 每个函数基本上看名字就知道是干啥的了。
@@ -182,7 +189,7 @@ name.padEnd(12, 'x')  // wangweitaoxx
 ```
 
 #### Number
-parseInt, parseFloat, isInteger, isNaN, EPSILON, **(Math.pow)...
+parseInt, parseFloat, isInteger, isNaN, EPSILON, \*\*(Math.pow)...
 parseInt, parseFloat之前是全局方法，可以直接调用，ES6以后移植到Number对象上，因此**不再是**全局的。
 ```javascript
 Number.isInteger(3) // true
@@ -199,9 +206,43 @@ Number.EPSILON表示一个极小常量，众所周知，由于浮点数的精度
 ```
 
 #### Array
-
+  这里列举一些可以取代**lodash**的原生函数，不一定是ES6中才出现的。
+  ```javascript
+  let arr = new Array(5)
+  // 取代 _.fill
+  arr.fill(0) //  [0, 0, 0, 0, 0] 
+  // 取代 _.some 用来检查数组中是否包含符合条件的元素
+  arr.some(el => el === 1) // false  
+  // 取代 _.every 用来检查数组中元素是否全部符合给定条件
+  arr.every(el => el === 0) // true
+  // 取代 _.forEach
+  let another_arr = []
+  arr.forEach((el, idx) => { another_arr[idx] = el + idx }) // [0, 1, 2, 3, 4]
+  // 取代 _.map
+  let third_arr = []
+  third_arr = arr.map((el, idx) => el + idx) // [0, 1, 2, 3, 4]
+  // 取代 _.reduce
+  third_arr.reduce((accu, curr) => accu + curr, 0) // 10
+  // Array.from
+  let fourth_arr = Array.from(third_arr) // Array.from会基于所给参数(字符串，数组或者Array-like的对象)创建一个新的数组
+  ```
 
 #### Object
+  实际生产中使用频率最高的莫过于 **Object.assign** 了，
+  场景1: 对象复制
+  ```javascript
+  let name = { last_name: 'wang', first_name: 'weitao' }
+  let copy = Object.assign({}, name)
+  ```
+  这里要注意一点，Object.assign的复制是**浅复制**，如果对象中包含引用，则原来的对象和复制的对象指向的是同一个引用。
 
+  场景2: 在不改变原有对象的情况下给对象附加属性
+  ```javascript
+  let name = { last_name: 'wang', first_name: 'weitao' }
+  let person = Object.assign({}, name, { age: 23 })  // {last_name: "wang", first_name: "weitao", age: 23} 
+  ```
+  但是为什么要这样做呢，直接在原有对象上赋值不是更简单吗。要解答这个问题， 就不得不提到[Redux](https://github.com/reactjs/redux)这个工具，我们用Redux来帮助管理App的状态，Redux把App的状态存在一个单一对象里，因此每次状态改变，这个对象也会相应改变，但是实际上承载**上一个**状态的对象并不会改变（听起来可能有点晕），状态改变会产生一个新的对象来承载当前最新的状态，这样做的好处之一就是使状态变得能够**回溯**。其中有一点函数式编程的意思，函数式编程中，函数不改变接收的参数。
 
 ## Part 2: 不常用特性
+
+出于篇幅考虑，这部分另起了一篇 [文章](https://github.com/weita0/blog/blob/master/2017-09-13.md)（👈 点这里跳转）
