--- a/2017-09-14.md
+++ b/2017-09-14.md
@@ -1,1 +1,102 @@
 # ES6中的常用特性和那些不常用但可能会非常有用的特性(Part 2)
+
+承接上文[ES6中的常用特性和那些不常用但可能会非常有用的特性(Part 1)](https://github.com/weita0/blog/blob/master/2017-09-13.md)
+
+本篇讲主要讲述ES6中那些有待挖掘的特性。
+
+### 1. Symbol
+  **Symbol是ES6中新增的一种基本类型**，地位可以说是很高了。在此之前，JavaScript共有6种基本类型，分别是
+  - undefined
+  - null
+  - string
+  - number
+  - boolean
+  - object
+  symbol横空出世之后，成为JS的第七种基本类型。
+  ```javascript
+  let s = Symbol()
+  typeof s  // symbol
+  ```
+  然而似乎一直以来，大家对Symbol的接受度没那么高，给人的感觉是有它没它都一样。不过我觉得吧，设计ES6方案的一帮人都是聪明人，不会把一个没有实际用途的东西加进来，徒增语言的冗余度和复杂度。所以看似无用的Symbol肯定还是有它的存在理由的。下面列举一些我能找到的使用场景：
+
+  场景1: 用来替代字符串常量
+  Symbol最大的特点，就是每一个Symbol都是独一无二、如假包换的，这一点很适合用来做常量
+  ```javascript    
+  const ACTIONS = {
+    add: Symbol('add'),
+    minus: Symbol('minus'),
+    multiply: Symbol('multiply'),
+    divide: Symbol('divide')
+  }
+  // 看起来似乎和字符串常量没啥区别
+  const actions = {
+    add: 'add',
+    minus: 'minus',
+    multiply: 'multiply',
+    divide: 'divide'
+  }
+  // 然而，当常量非常多的时候（可能会有成百上千个），Symbol的优势就体现出来了，你不必担心新声明的常量值和之前会重复，因为每一个Symbol都不一样
+  ```
+  用过Redux就会知道，每个操作都对应一个**action**，action有一个**type**属性，**reducer**就是根据action的type来定具体要做的事情，代码大致如下：
+  ```javascript
+  function reducer(state, action) {
+    switch (action.type) {
+      case 'condition_one':
+        // do something
+      case 'condition_two':
+        // do something
+      // ...other cases
+      default:
+        // do something
+    }
+  }
+  ```
+  一个SPA可能有很多个这样的reducer，为了避免action的type重名，通常会约定在同一个地方定义所有的常量，但还是不能保证**绝对**不会重复，如果一不注意定义了一个字符串常量和已有的常量值相同，相应的action就可能在另一个地方被「劫持」，怎么也执行不到你期望的地方。
+  
+  = = = = *markdown 自身的分割线实在不怎么好看啊* = = = = =
+  
+  场景2：用来创建对象私有属性
+  在Symbol出现之前，对象属性的key一定是string，现在又多了一种选择。
+  ```javascript
+  const foo = Symbol()
+  const bar = {
+    [foo]: 'hello'    // key是Symbol，定义时一定要借助中括号
+  }
+  bar[foo]  // hello
+  // 引用属性时一定要用中括号这种方式
+  bar.foo   // undefined   
+  ```
+  那么如何用Symbol来创建对象的私有属性，在这有必要解释一下，这里说的私有**并不是**严格意义上的私有（从对象外部无法访问），只是营造出一种属性私有的感觉...借助Symbol的特性可以做到：
+  ```javascript
+  const x = Symbol()
+  const obj = {
+    [x]: 'i\'m private'
+  }  
+  for(let el in x) {
+    console.log(el)  // log nothing...
+  }
+  Object.keys(obj)  // []
+  Object.entries(obj) // [] 
+  JSON.stringify(obj)  // {}
+  ```
+  可以看到，以上四种方式都不会取得obj[x]这个属性，对外部来说像透明的一样
+
+  但是...(毕竟凡事都有但是)也不是没有手段可以获取，比如
+  ```javascript
+  Reflect.ownKeys(obj)  // [Symbol()]
+  Object.getOwnPropertySymbols(obj)  // [Symbol()]
+  ```
+  所以还是谨慎使用这个特性吧...
+  
+### 2. Set和Map
+  Set和Map是ES6中新加入的两种数据结构，Set的特点是不能放入重复的值；Map类似对象，特点是任何数据类型都可以当作key。
+  ```javascript
+  const s = new Set()
+  s.add(NaN) //  Set(1) {NaN}
+  s.add(NaN) // Set(1) {NaN}  可见Set对NaN一视同仁
+
+  // 利用Set去重
+  let origin = 'aabbcdeff'
+  let middle = new Set(str)
+  origin = [...set].join('')  // "abcdef"
+  ```
