--- a/2017-09-12.md
+++ b/2017-09-12.md
@@ -1,21 +1,25 @@
-# 古今中外那些哲学家们
+# 古今~~中外~~那些哲学家们
 
 写在前面： 前几天偶然在amazon发现一本叫「哲学家都干了些什么」的书，虽然是不知名的作者，但是看到四百多个评价还能保持四星半的分数，那应该内容不错，于是就下单了。看完觉得确实不错，作者用大白话把整个哲学史捋了一遍，即使是之前看过类似的书（比如「苏菲的世界」，冯友兰的那本哲学史），也不会觉得重复或腻味。这里我想凭记忆把那些有影响力的哲学家以及主要思想给罗列出来，也算有些收获。
 
 | 姓名             | 国籍            | 主要思想             |
 | -------------- | ------------- | ---------------- | 
-| 苏格拉底           | 希腊            | 西方哲学奠基人，柏拉图的老师，用提问的方式来引发讨论和思考，最后被希腊城邦的公民公投判决死刑                 |
-| 柏拉图             | 希腊 | 开创了二元论，将世界二分为*智慧*和*感觉*，亚里士多德的老师 |
-| 亚里士多德 | 希腊 | 众多学科都颇有研究，包括解剖学、天文学、经济学、地质学、气象学、物理学和生物学等 |
-| 斯宾诺莎 | 荷兰 | 一元论，把世间万物看作一个整体，我们都是这个整体的一部分，所以作为个体的人不存在自由意志，一生贫苦，以打磨镜片为生，早逝 |
-| 笛卡尔 | 法国 | 哲学家、数学家和物理学家，理性主义代表 |
-| 洛克 | 英国 | 经验主义代表人物，认为心灵是一块白板，人生下来时不带有任何记忆和思想，政治上主张政府只有在取得被统治者的同意，并且保障人民拥有*生命*、*自由*和*财产*的自然权利时，其统治才有正当性 |
-| 霍布斯 |  |  |
-| 休谟 |  |  |
-| 莱布尼兹 |  |  |
-| 牛顿 |  |  |
-| 康德 |  |  |
-| 尼采 |  |  |
+| 苏格拉底 | 希腊 | 西方哲学奠基人，柏拉图的老师，用提问的方式引发讨论和思考，最后被希腊城邦的公民公投判决死刑 |
+| 柏拉图 | 希腊 | 亚里士多德的老师（此书对柏拉图着墨不多，几乎是一笔带过） |
+| 亚里士多德 | 希腊 | 对众多学科都颇有研究，包括解剖学、天文学、经济学、地质学、气象学、物理学和生物学等（但是很多都是错的，受制于所处的时代，也是没办法的事） |
+| 笛卡尔 | 法国 | 怀疑论和理性主义的代表，确立了理论必须经得起怀疑的原则，提出「二元论」的观点，即心灵和世界是相互独立、平等的。著名的「我思故我在」就出自他口 |
+| 斯宾诺莎 | 荷兰 | 理性主义继承者，提出「实体论」，把世界看作一个整体，世间万物都是这个整体的一部分（有点类似中国古代的「天人合一」），一生贫苦，以打磨镜片为生，早逝 |
+| 培根 | 英国 | 强调事实，提出「归纳法」 |
+| 洛克 | 英国 | 经验主义代表人物，反对笛卡尔。认为心灵是一块白板，人生下来时不带有任何记忆和思想，都是后天习得。政治上主张政府只有在取得被统治者的同意，并且保障人民拥有*生命*、*自由*和*财产*的自然权利时，其统治才有正当性 |
+| 莱布尼兹 | 德国 | 理性主义者，认为一切物质都是由精神（也叫「单子」）组成的，「世上没有两片树叶是相同的」的出处。 |
+| 牛顿 | 英国 | 牛顿发现的力学三定律，强化了哲学中的「机械论」，机械论强调人的意识是一些列物质作用的结果。由机械论可以进一步推导出「决定论」，决定论认为每个事件之前遵循严格的因果关系，知道所有的前提条件，就一定能推导出结果。这意味着不存在所谓自由意志，一切事情的发生都是在最开始就安排好的（类似「宿命论」） |
+| 霍布斯 | 英国 | 机械唯物主义论者 |
+| 休谟 | 英国 | 经验主义，认为所谓「我」，只不过是一对经验片段的集合，没有一个独立于经验的、实在的「我」存在。对于认知论，休谟认为只有不依赖于经验的知识（比如几何学）和我们自己感受到的经验这两种才是可信的。否定「因果律」和建立在因果律之上的「归纳法」。他说过「你怎么知道明天的太阳会照常升起」 |
+| 康德 | 德国 | 提出「物自体」的概念，认为心灵不是去「感受」经验而是「加工」经验，就像戴着有色眼镜一样，我们看到的是只是表象，事物本身的样子就叫做「物自体」。「时间」、「空间」以及「因果律」都存在于人的先天认识形式（在他那里称作「先验」，即先于经验）里。 |
+| 黑格尔 | 德国 | 提出「辩证法」，认为矛盾是世界的本质，事物是不断变化的，这种变化是自发的、无法抑制的，并且是从低级到高级的转变。 |
+| 叔本华 | 德国 | 代表作《作为意志和表象的世界》，反对黑格尔，继承康德，但是认为物自体只有一个，那就是被他称为「生命意志」的东西，是一切事物的本质。简单来说，生命意志是一股永不停歇的力量，世间万物都受到生命意志的驱使。比如人有七情六欲，种子总是破土而出。主张克制欲望，因为欲望是永无止境的，通过欣赏艺术作品可以减轻欲望。 |
+| 尼采 | 德国 | 继承叔本华，提出「权力意志」的概念，把道德分为「奴隶道德」和「贵族道德」，奴隶道德总是约束人的言行，贵族道德则鼓励人们自由创造 |
+| 克尔凯郭尔 | 丹麦 |  |
 | 罗素 |  |  |
 | 维特根斯坦 |  |  |
 | 波普尔 |  |  |
