--- a/2017-09-15.md
+++ b/2017-09-15.md
@@ -13,7 +13,7 @@
 
 类似的工作还有超市收银员，现在已经出现了无人超市，相信不久之后就会全面普及，到那个时候，这些收银员又将何去何从呢。再比如汽车司机，等以后自动驾驶技术成熟了，对专职司机的需求将不复存在，驾校教练也都将面临失业。
 
-不仅仅是体力工作，脑力工作同样也有被取代的危险，特别是AlphaGo出现以后，以前认为机器无法胜任人类思考的观点也被击破...
+不仅是体力工作，脑力工作同样也有被取代的危险，特别是AlphaGo出现后，人工智能似乎已经离我们不远了。过去通常认为只有人类才能从事的事情，现在机器也能做，而且做的比人更出色，人在机器面前显得毫无竞争力。
 
 - 能够自我提升
 
@@ -21,15 +21,15 @@
 
 - 能使更多的人受惠
 
-画家画一幅画，作家写一本书，导演拍一部电影，都能够在本国乃至全世界流传，其中经得起时间的考验的经典之作，还能流传千古，影响无数人。富兰克林和杰斐逊那帮人起草的「独立宣言」，影响了后来世世代代的美国人。
+画家画一幅画，作家写一本书，导演拍一部电影，都能够在本国乃至全世界流传，其中经得起时间考验的经典之作，还能流传千古，影响无数人。富兰克林和杰斐逊那帮人起草的「独立宣言」，影响了后来世世代代的美国人。
 
 **回答了问题1，再来看看问题2。**
 
-程序员所做的工作，目前看来，还不会被机器取代，毕竟要厘清复杂的业务逻辑也不是一件轻松的事情，需要与人沟通才能完成，机器显然还做不到这一点。
+程序员所做的工作，目前看来，「暂时」不会被机器取代，毕竟要厘清复杂的业务逻辑也不是一件轻松的事情，需要与人沟通才能完成，机器显然还做不到这一点。
 
-能够在工作中增长经验，而不是机械的重复，总的来说还是符合条件的。
+能够在工作中增长经验，而不是机械性地重复，总的来说还是符合条件的。但是，写代码的水平和工作经验并不是线性相关的。三年经验不一定就比有五年、十年经验的程序员差。有的人只是把程序员当作一份养家糊口的工作，有的人是打心眼里喜欢编程、喜欢创造，这两种人自然不会一样。
 
-能否使很多人受惠？这得看公司具体是做什么的以及公司的价值观导向，我想每个人心里都自有公论。
+能否使很多人受惠？这得看公司具体是做什么的以及公司的价值观导向，我想每个人心里都自有公论。目前「互联网」这个行业，风气不是很好，许多创业者喜欢蹭热点，什么概念火做什么，也不管能不能做得长久，反正他们的目标也不是这个。
 
 
 
