--- a/2017-09-27.md
+++ b/2017-09-27.md
@@ -46,5 +46,5 @@ React独创了JSX语法，JSX是JavaScript语法的扩展。在React的体系里
 
 至于自定义方法，在React里和组件生命周期方法无区别对待，而在Vue中，自定义方法放在methods属性下面，和生命周期方法很好地区别开来，这一点我认为也是优于React的。
 
-Vue支持给组件state添加观察事件，当对应的state改变时触发，这类方法统一放在watch属性里，React则没有。
+Vue支持给组件state添加观察事件，当对应的state改变时触发，这类方法统一放在组件的watch属性里，React则没有。
 
