--- a/2017-10-18.md
+++ b/2017-10-18.md
@@ -1,25 +1,26 @@
-#REPL in Node.js
+# REPL in Node.js
 
 REPL - Read-Eval-Print-Loop
 
 ## Commands
-###.break
+### .break
 abort further input or processing of that expression
-###.clear
+### .clear
 reset context to an empty object
-###.exit
+### .exit
 clear the IO stream, and exit
-###.help
+### .help
 show this list of special commands
-###.save
-save the current REPL session to a file  
->    .save ./file/to/save.js
-###.load
+### .save
+save the current REPL session to a file 
+
+\> .save ./file/to/save.js
+### .load
 load a file into the current PEPL session 
 > ```
 > .load ./file/to/load.js
 > ```
-###.editor
+### .editor
 enter editor mode
 
 ## _ variable
